--- a/hdi_payroll/views/hr_salary_rule_views.xml
+++ b/hdi_payroll/views/hr_salary_rule_views.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- HR Salary Rule Views -->
-    <record id="view_hr_salary_rule_tree" model="ir.ui.view">
-        <field name="name">Rule tính lương - Tree</field>
+    <record id="view_hr_salary_rule_list" model="ir.ui.view">
+        <field name="name">Rule tính lương - List</field>
         <field name="model">hr.salary.rule</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="sequence"/>
                 <field name="code"/>
                 <field name="name"/>
                 <field name="category"/>
                 <field name="active"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -46,6 +46,6 @@
     <record id="action_hr_salary_rule" model="ir.actions.act_window">
         <field name="name">Rule tính lương</field>
         <field name="res_model">hr.salary.rule</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
