--- a/hdi_payroll/views/hr_salary_grade_views.xml
+++ b/hdi_payroll/views/hr_salary_grade_views.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- HR Salary Grade Views -->
-    <record id="view_hr_salary_grade_tree" model="ir.ui.view">
-        <field name="name">Hệ số lương - Tree</field>
+    <record id="view_hr_salary_grade_list" model="ir.ui.view">
+        <field name="name">Hệ số lương - List</field>
         <field name="model">hr.salary.grade</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="job_id"/>
                 <field name="level"/>
                 <field name="base_salary"/>
                 <field name="coefficient"/>
                 <field name="allowance"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -47,6 +47,6 @@
     <record id="action_hr_salary_grade" model="ir.actions.act_window">
         <field name="name">Hệ số lương</field>
         <field name="res_model">hr.salary.grade</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
