--- a/hdi_payroll/views/hr_salary_structure_views.xml
+++ b/hdi_payroll/views/hr_salary_structure_views.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- HR Salary Structure Views -->
-    <record id="view_hr_salary_structure_tree" model="ir.ui.view">
-        <field name="name">Cấu trúc lương - Tree</field>
+    <record id="view_hr_salary_structure_list" model="ir.ui.view">
+        <field name="name">Cấu trúc lương - List</field>
         <field name="model">hr.salary.structure</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="company_id"/>
                 <field name="active"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -30,13 +30,13 @@
                     </group>
                     <separator string="Các rule tính lương"/>
                     <field name="rule_ids">
-                        <tree>
+                        <list>
                             <field name="sequence"/>
                             <field name="code"/>
                             <field name="name"/>
                             <field name="category"/>
                             <field name="active"/>
-                        </tree>
+                        </list>
                     </field>
                     <field name="notes" placeholder="Ghi chú..."/>
                 </sheet>
@@ -47,6 +47,6 @@
     <record id="action_hr_salary_structure" model="ir.actions.act_window">
         <field name="name">Cấu trúc lương</field>
         <field name="res_model">hr.salary.structure</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
