--- a/hdi_payroll/views/hr_salary_rule_views.xml
+++ b/hdi_payroll/views/hr_salary_rule_views.xml
@@ -10,6 +10,7 @@
                 <field name="code"/>
                 <field name="name"/>
                 <field name="category"/>
+                <field name="working_days_base"/>
                 <field name="active"/>
             </list>
         </field>
@@ -26,6 +27,7 @@
                             <field name="name"/>
                             <field name="code"/>
                             <field name="category"/>
+                            <field name="working_days_base"/>
                         </group>
                         <group>
                             <field name="structure_id"/>
