--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Extend HR Attendance with Excuse Info -->
-    <record id="view_hr_attendance_form_inherit" model="ir.ui.view">
-        <field name="name">hr.attendance.form - Inherit Excuse</field>
+    <record id="view_hr_attendance_form_inherit_excuse" model="ir.ui.view">
+        <field name="name">hr.attendance - Inherit Excuse Info</field>
         <field name="model">hr.attendance</field>
-        <field name="inherit_id" ref="hr_attendance.view_attendance_form"/>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="base.view_res_partner_form"/>
+        <field name="priority">99</field>
         <field name="arch" type="xml">
-            <xpath expr="//sheet" position="inside">
-                <separator string="Giải trình"/>
+            <form>
                 <group>
                     <group>
                         <field name="is_excused"/>
                         <field name="has_pending_excuse"/>
                     </group>
                 </group>
-                <field name="excuse_ids">
+                <separator string="Giải trình liên quan"/>
+                <field name="excuse_ids" readonly="1">
                     <tree>
                         <field name="date"/>
                         <field name="excuse_type_id"/>
                         <field name="status"/>
                     </tree>
                 </field>
-            </xpath>
+            </form>
         </field>
     </record>
 </odoo>
