--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='check_out']" position="after">
+                <field name="requires_excuse" optional="show"/>
                 <field name="is_excused" optional="show"/>
                 <field name="has_pending_excuse" optional="show"/>
             </xpath>
@@ -21,14 +22,15 @@
         <field name="arch" type="xml">
             <!-- Add excuse fields after worked_hours group -->
             <xpath expr="//field[@name='worked_hours']" position="after">
-                <field name="is_excused"/>
-                <field name="has_pending_excuse"/>
+                <field name="requires_excuse"/>
+                <field name="is_excused" invisible="not requires_excuse"/>
+                <field name="has_pending_excuse" invisible="not requires_excuse"/>
             </xpath>
 
-            <!-- Add excuse tab in the form -->
+            <!-- Add excuse tab in the form only when needed -->
             <xpath expr="//sheet" position="inside">
                 <notebook>
-                    <page string="Giải trình chấm công" name="excuse_tab">
+                    <page string="Giải trình chấm công" name="excuse_tab" invisible="not requires_excuse">
                         <field name="excuse_ids">
                             <list>
                                 <field name="date"/>
