--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -35,7 +35,7 @@
                             <list>
                                 <field name="date"/>
                                 <field name="excuse_type_id"/>
-                                <field name="status"/>
+                                <field name="state"/>
                             </list>
                         </field>
                     </page>
