--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Extend HR Attendance List View with Excuse Info -->
-    <record id="view_hr_attendance_list_inherit_excuse" model="ir.ui.view">
-        <field name="name">hr.attendance.list.inherit.excuse</field>
-        <field name="model">hr.attendance</field>
-        <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='check_out']" position="after">
-                <field name="requires_excuse" optional="show"/>
-                <field name="is_excused" optional="show"/>
-                <field name="has_pending_excuse" optional="show"/>
-            </xpath>
-        </field>
-    </record>
+  <!-- Extend HR Attendance List View with Excuse Info -->
+  <record id="view_hr_attendance_list_inherit_excuse" model="ir.ui.view">
+    <field name="name">hr.attendance.list.inherit.excuse</field>
+    <field name="model">hr.attendance</field>
+    <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
+    <field name="arch" type="xml">
+      <xpath expr="//field[@name='check_out']" position="after">
+        <field name="requires_excuse" optional="show"/>
+        <field name="is_excused" optional="show"/>
+        <field name="has_pending_excuse" optional="show"/>
+      </xpath>
+    </field>
+  </record>
 
-    <!-- Extend HR Attendance Form View with Excuse Info -->
-    <record id="view_hr_attendance_form_inherit_excuse" model="ir.ui.view">
-        <field name="name">hr.attendance.form.inherit.excuse</field>
-        <field name="model">hr.attendance</field>
-        <field name="inherit_id" ref="hr_attendance.hr_attendance_view_form"/>
-        <field name="arch" type="xml">
-            <!-- Add excuse fields after worked_hours group -->
-            <xpath expr="//field[@name='worked_hours']" position="after">
-                <field name="requires_excuse"/>
-                <field name="is_excused" invisible="not requires_excuse"/>
-                <field name="has_pending_excuse" invisible="not requires_excuse"/>
-            </xpath>
+  <!-- Extend HR Attendance Form View with Excuse Info -->
+  <record id="view_hr_attendance_form_inherit_excuse" model="ir.ui.view">
+    <field name="name">hr.attendance.form.inherit.excuse</field>
+    <field name="model">hr.attendance</field>
+    <field name="inherit_id" ref="hr_attendance.hr_attendance_view_form"/>
+    <field name="arch" type="xml">
+      <!-- Add excuse fields after worked_hours group -->
+      <xpath expr="//field[@name='worked_hours']" position="after">
+        <field name="requires_excuse" invisible="1"/>
+        <field name="is_excused" invisible="1"/>
+        <field name="has_pending_excuse" invisible="1"/>
+      </xpath>
 
-            <!-- Add excuse tab in the form only when needed -->
-            <xpath expr="//sheet" position="inside">
-                <notebook>
-                    <page string="Giải trình chấm công" name="excuse_tab" invisible="not requires_excuse">
-                        <field name="excuse_ids">
-                            <list>
-                                <field name="date"/>
-                                <field name="excuse_type_id"/>
-                                <field name="state"/>
-                            </list>
-                        </field>
-                    </page>
-                </notebook>
-            </xpath>
-        </field>
-    </record>
+      <!-- Add excuse tab in the form only when needed -->
+      <xpath expr="//sheet" position="inside">
+        <notebook>
+          <page string="Giải trình chấm công" name="excuse_tab" invisible="not requires_excuse">
+            <field name="excuse_ids">
+              <list>
+                <field name="date"/>
+                <field name="excuse_type_id"/>
+                <field name="state"/>
+              </list>
+            </field>
+          </page>
+        </notebook>
+      </xpath>
+    </field>
+  </record>
 </odoo>
