--- a/hdi_attendance_excuse/views/attendance_excuse_views.xml
+++ b/hdi_attendance_excuse/views/attendance_excuse_views.xml
@@ -26,9 +26,9 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="submit" string="Gửi yêu cầu" type="object" class="btn-primary" invisible="state != 'pending'"/>
-                    <button name="approve" string="Phê duyệt" type="object" class="btn-success" invisible="state != 'submitted'"/>
-                    <button name="reject" string="Từ chối" type="object" class="btn-danger" invisible="state != 'submitted'"/>
+                    <button name="action_submit" string="Gửi yêu cầu" type="object" class="btn-primary" invisible="state != 'pending'"/>
+                    <button name="action_approve" string="Phê duyệt" type="object" class="btn-success" invisible="state != 'submitted'"/>
+                    <button name="action_reject" string="Từ chối" type="object" class="btn-danger" invisible="state != 'submitted'"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
