--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -34,7 +34,7 @@
             <field name="excuse_ids">
               <list>
                 <field name="date"/>
-                <field name="excuse_type_id"/>
+                <field name="excuse_type"/>
                 <field name="state"/>
               </list>
             </field>
