--- a/hdi_attendance_excuse/views/hr_attendance_views.xml
+++ b/hdi_attendance_excuse/views/hr_attendance_views.xml
@@ -64,7 +64,7 @@
   <record id="action_hr_attendance_calendar" model="ir.actions.act_window">
     <field name="name">Lịch Chấm Công</field>
     <field name="res_model">hr.attendance</field>
-    <field name="view_mode">calendar,tree,form</field>
+    <field name="view_mode">calendar,list,form</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
         Không có bản ghi chấm công. Hãy tạo một bản ghi mới!
