--- a/hdi_attendance_excuse/views/attendance_excuse_views.xml
+++ b/hdi_attendance_excuse/views/attendance_excuse_views.xml
@@ -26,14 +26,18 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="action_submit" string="Gửi yêu cầu" type="object" class="btn-primary" invisible="state != 'pending'"/>
-                    <button name="action_approve" string="Phê duyệt" type="object" class="btn-success" invisible="not can_approve"/>
-                    <button name="action_reject" string="Từ chối" type="object" class="btn-danger" invisible="not can_reject"/>
+                    <button name="action_submit" string="Gửi yêu cầu" type="object" class="btn-primary"
+                            invisible="state != 'pending'"/>
+                    <button name="action_approve" string="Phê duyệt" type="object" class="btn-success"
+                            invisible="not can_approve"/>
+                    <button name="action_reject" string="Từ chối" type="object" class="btn-danger"
+                            invisible="not can_reject"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button name="get_my_requests" string="Yêu cầu của tôi" type="object" class="oe_stat_button" icon="fa-list"/>
+                        <button name="get_my_requests" string="Yêu cầu của tôi" type="object" class="oe_stat_button"
+                                icon="fa-list"/>
                     </div>
                     <h2>
                         <field name="display_name" readonly="1"/>
