--- a/hdi_attendance_excuse/views/attendance_excuse_views.xml
+++ b/hdi_attendance_excuse/views/attendance_excuse_views.xml
@@ -27,7 +27,7 @@
             <form>
                 <header>
                     <button name="action_submit" string="Gửi yêu cầu" type="object" class="btn-primary"
-                            invisible="state != 'pending'"/>
+                            invisible="state != 'draft'"/>
                     <button name="action_approve" string="Phê duyệt" type="object" class="btn-success"
                             invisible="not can_approve"/>
                     <button name="action_reject" string="Từ chối" type="object" class="btn-danger"
